# FSync

./: .gitignore  Cargo.toml  config.yaml
docs/: design_plan.md
fsync-cli/: Cargo.toml
fsync-cli/src/: main.rs
fsync-core/: Cargo.toml
fsync-core/src/: config.rs  convert.rs  convert_tests.rs  file_op.rs  filter.rs  lib.rs  manager.rs  remote.rs  storage.rs  task.rs  utils.rs
fsync-remote-sftp/: Cargo.toml  russh_client_example.rs
fsync-remote-sftp/src/: lib.rs  ssh_client.rs  utils.rs
fsync-ui-egui/: Cargo.toml  build.rs
fsync-ui-egui/src/: app.rs  main.rs  models.rs  operation_logs.rs  storage.rs  theme.rs  widgets.rs
fsync-ui-egui/src/app/: profiles_ui.rs  shell.rs  tasks_ui.rs
fsync-ui-iced/: Cargo.toml
fsync-ui-iced/src/: main.rs
fsync-ui-slint/: Cargo.toml
fsync-ui-slint/src/: main.rs
fsync-ui-slint/ui/: app.slint
