[package]
name = "fsync-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
fsync-core = { path = "../fsync-core" }
fsync-remote-sftp = { path = "../fsync-remote-sftp" }
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
