[package]
name = "fsync-remote-sftp"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
russh = { version = "0.61", features = ["default"] }
russh-sftp = { version = "2.1.1", features = [] }
async-trait = "0.1"
anyhow = "1.0"
fsync-core = { path = "../fsync-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
