[package]
name = "fsync-ui-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = "0.34.3"
egui = "0.34.3"
fsync-core = { path = "../fsync-core" }
fsync-remote-sftp = { path = "../fsync-remote-sftp" }
icu_provider = { version = "2.2", default-features = false, features = ["logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
