[package]
name = "fsync-ui-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "lazy"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_yaml = "0.9"
fsync-core = { path = "../fsync-core" }
fsync-remote-sftp = { path = "../fsync-remote-sftp" }
tokio = { version = "1.28", features = ["full"] }
